--- a/Modules/WebDashboardBoardModule/ClientApp/src/app/modules/navigation/components/navigation/navigation.component.html
+++ b/Modules/WebDashboardBoardModule/ClientApp/src/app/modules/navigation/components/navigation/navigation.component.html
@@ -1,26 +1,2 @@
-<mat-toolbar color="primary">
-    <button mat-icon-button *ngIf="(isInLogin$ | async) !== true" (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
-
-    <mat-select
-        *ngIf="guildSelectionService.guilds$ | async as guilds"
-        class="ml-3 text-center"
-        [value]="guildSelectionService.selectedGuildId$ | async"
-        (selectionChange)="guildSelectionService.selectGuildId($event.value)"
-    >
-        <mat-option *ngFor="let guild of guilds" [value]="guild.id">{{ guild.name }} ({{ guild.id }})</mat-option>
-    </mat-select>
-</mat-toolbar>
-<mat-sidenav-container class="d-flex flex-md-column flex-grow-1" [style.marginTop.px]="mobileQuery.matches ? 56 : 0" hasBackdrop="true">
-    <mat-sidenav #sidenav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-        <mat-nav-list>
-            <a mat-list-item *ngFor="let button of buttons" (click)="navigationService.navigateToUrl(button.url)">
-                <mat-icon>{{ button.icon }}</mat-icon>
-                <span class="ml-3" *ngIf="!mobileQuery.matches">{{ button.name }}</span>
-            </a>
-        </mat-nav-list>
-    </mat-sidenav>
-
-    <mat-sidenav-container>
-        <ng-content></ng-content>
-    </mat-sidenav-container>
-</mat-sidenav-container>
+<app-navigation-toolbar class="d-contents" [(sidenavOpened)]="sidenavOpened"></app-navigation-toolbar>
+<app-navigation-sidenav class="d-contents" [(sidenavOpened)]="sidenavOpened"><ng-content></ng-content></app-navigation-sidenav>
