Make website dashboard usable

--- a/Modules/WebDashboardModule/ClientApp/src/app/app.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/app.component.html
@@ -1,7 +1,5 @@
 <body>
-    <app-navigation class="h-100">
-        <app-content>
-            <router-outlet></router-outlet>
-        </app-content>
-    </app-navigation>
+    <app-page class="h-100">
+        <router-outlet></router-outlet>
+    </app-page>
 </body>
