--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/sidenav-container/sidenav-container.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/sidenav-container/sidenav-container.component.html
@@ -8,8 +8,10 @@
     >
         <mat-nav-list>
             <a mat-list-item *ngFor="let button of buttons" (click)="navigateToUrl(button.url)">
-                <mat-icon>{{ button.icon }}</mat-icon>
-                <span class="ml-3" *ngIf="!isMobileView">{{ button.name }}</span>
+                <ng-container *ngIf="!button.hidden">
+                    <mat-icon>{{ button.icon }}</mat-icon>
+                    <span class="ml-3" *ngIf="!isMobileView">{{ button.name }}</span>
+                </ng-container>
             </a>
         </mat-nav-list>
     </mat-sidenav>
