Add Logout, improve Login, bugfixes

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/login/components/login/login.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/login/components/login/login.component.html
@@ -1,1 +1,1 @@
-<a [href]="loginService.oAuthUrl$ | async"><img class="sign-in-button" src="assets/images/SignInWithDiscord.png" /></a>
+<img matRipple class="sign-in-button" src="assets/images/SignInWithDiscord.png" (click)="service.signIn()" />
