--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/play-queue-playlist/play-queue-playlist.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/play-queue-playlist/play-queue-playlist.component.html
@@ -1,6 +1,6 @@
 <div class="container flex-column p-0 m-0 mt-3">
     <div class="d-flex flex-column flex-wrap">
-        <app-audio-provider class="flex-shrink-0 mr-3 mb-3 w-fit-content" [audioProvider]="audioProvider"></app-audio-provider>
+        <app-audio-provider class="flex-shrink-0 mr-3 mb-3 w-fit-content" [(audioProvider)]="audioProvider"></app-audio-provider>
         <mat-form-field class="flex-grow-1 flex-shrink-1 mb-3">
             <mat-label>{{ 'PlaylistUrl' | translate }}</mat-label>
             <input matInput [(ngModel)]="urlIdOrSearch" />
