Improve toolbar design on login

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/toolbar/toolbar.component.scss
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/toolbar/toolbar.component.scss
@@ -2,4 +2,8 @@
     background-size: 100% 100% !important;
     border: 0;
     margin-right: 1rem;
+
+    &:first-child {
+        margin-left: auto;
+    }
 }
