Test AudioSettings with volume

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio/audio.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio/audio.component.html
@@ -18,12 +18,12 @@
             <mat-icon>replay</mat-icon>
         </ng-template>
         <app-play-queue-playlist></app-play-queue-playlist>
-    </mat-tab>
+    </mat-tab>-->
 
     <mat-tab>
         <ng-template mat-tab-label>
             <mat-icon>video_settings</mat-icon>
         </ng-template>
-        <app-play-queue-playlist></app-play-queue-playlist>
-    </mat-tab>-->
+        <app-audio-settings></app-audio-settings>
+    </mat-tab>
 </mat-tab-group>
