Implement server settings

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio-settings/audio-settings.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio-settings/audio-settings.component.html
@@ -1,8 +1,7 @@
-<div class="flex-column d-flex flex-wrap mt-3">
-    <div class="d-flex mb-3 align-items-center" *ngIf="(service.volume$ | async)?.valueOf() as volume">
-        <mat-label class="mr-3">{{ 'Volume' | translate }} {{ volume }}</mat-label>
+<div class="setting-container">
+    <div class="setting-row" *ngIf="(service.volume$ | async)?.valueOf() as volume">
+        <mat-label>{{ 'Volume' | translate }} {{ volume }}</mat-label>
         <mat-slider
-            class="flex-grow-1 flex-shrink-1 mr-3"
             [min]="0"
             [max]="200"
             [step]="1"
