--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/server-settings/server-settings.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/server-settings/server-settings.component.html
@@ -1,9 +1,9 @@
 <mat-tab-group *ngIf="service.moduleDatas$ | async as moduleDatas" (selectedTabChange)="service.selectModule($event.tab.textLabel)">
     <mat-tab *ngFor="let moduleData of moduleDatas" [label]="moduleData.name">
         <ng-template matTabContent>
-            <mat-slide-toggle [ngModel]="moduleData.isActive" (ngModelChange)="service.setModuleActive(moduleData.name, $event)"></mat-slide-toggle>
-            <ng-container *ngIf="moduleData.isActive">
-                <div class="setting-container" *ngIf="service.moduleSettings$ | async as moduleSettings">
+            <div class="setting-container">
+                <mat-slide-toggle [ngModel]="moduleData.isActive" (ngModelChange)="service.setModuleActive(moduleData.name, $event)"></mat-slide-toggle>
+                <ng-container *ngIf="moduleData.isActive && (service.moduleSettings$ | async) as moduleSettings">
                     <div class="setting-row" *ngFor="let setting of moduleSettings">
                         <span>{{ setting.name }}:</span>
                         <mat-form-field>
@@ -15,8 +15,8 @@
                             />
                         </mat-form-field>
                     </div>
-                </div>
-            </ng-container>
+                </ng-container>
+            </div>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
