--- a/Modules/WebDashboardModule/ClientApp/src/styles.scss
+++ b/Modules/WebDashboardModule/ClientApp/src/styles.scss
@@ -36,3 +36,11 @@ body {
 .mw-50 {
     max-width: 50% !important;
 }
+
+.r-0 {
+    right: 0 !important;
+}
+
+.b-0 {
+    bottom: 0 !important;
+}
