Fix useless vertical scrollbar in web settings

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/content/content.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/content/content.component.html
@@ -1,4 +1,4 @@
-<div class="p-3">
+<div class="p-3 h-100">
     <ng-container *ngIf="service.accessLevel$ | async as accessLevel">
         <ng-content *ngIf="!service.loading && accessLevel === accessLevelEnum.hasAccess"></ng-content>
     </ng-container>
