--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/server-settings/server-settings.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/server-settings/server-settings.component.html
@@ -1,11 +1,11 @@
-<mat-tab-group *ngIf="service.moduleDatas$ | async as moduleDatas" (selectedTabChange)="service.selectModule($event.tab.textLabel)">
+<mat-tab-group class="h-100" *ngIf="service.moduleDatas$ | async as moduleDatas" (selectedTabChange)="service.selectModule($event.tab.textLabel)">
     <mat-tab *ngFor="let moduleData of moduleDatas" [label]="moduleData.name">
         <ng-template matTabContent>
             <div class="setting-container">
                 <mat-slide-toggle
                     *ngIf="moduleData.canDisable"
                     [ngModel]="moduleData.isActive"
-                    (ngModelChange)="service.setModuleActive(moduleData.name, $event)"
+                    (ngModelChange)="service.setModuleActive(moduleData.name, $event, moduleData.canDisable)"
                 ></mat-slide-toggle>
                 <ng-container *ngIf="moduleData.isActive && (service.moduleSettings$ | async) as moduleSettings">
                     <div class="setting-row" *ngFor="let setting of moduleSettings">
