Fix color setting issues in web

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/shared/components/color-picker/color-picker.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/shared/components/color-picker/color-picker.component.html
@@ -5,11 +5,11 @@
     [ngxMatColorPicker]="picker"
     [required]="required"
     (click)="picker.opened = true"
-    [(ngModel)]="value"
+    [ngModel]="value"
     readonly
 />
 <ngx-mat-color-toggle [disabled]="disabled" class="position-absolute r-0 b-0" matSuffix [for]="picker"></ngx-mat-color-toggle>
-<ngx-mat-color-picker #picker [disabled]="disabled" [touchUi]="mobileService.isMobileView" color="primary">
+<ngx-mat-color-picker #picker [disabled]="disabled" [touchUi]="mobileService.isMobileView" color="primary" (closed)="value = picker._selected">
     <ng-template>
         <mat-icon>done</mat-icon>
     </ng-template>
