--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/color/components/color/color.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/color/components/color/color.component.html
@@ -1,10 +1,6 @@
 <div class="setting-container">
     <mat-form-field>
         <mat-label>{{ 'Color' | translate }}</mat-label>
-        <app-color-picker
-            [ngModel]="service.color$ | async"
-            (ngModelChange)="service.colorChanged.next($event)"
-            [ngModelOptions]="{ updateOn: 'blur' }"
-        ></app-color-picker>
+        <app-color-picker [ngModel]="service.color$ | async" (ngModelChange)="service.colorChanged.next($event)"></app-color-picker>
     </mat-form-field>
 </div>
