Implement web settings template system + add some settings

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/page/options/setting-string-option/setting-string-option.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/page/options/setting-string-option/setting-string-option.component.html
@@ -7,6 +7,6 @@
         [ngModelOptions]="{ updateOn: 'blur' }"
         [minlength]="info.min"
         [maxlength]="info.max"
-        [placeholder]="defaultValue"
+        [placeholder]="placeHolder"
     />
 </mat-form-field>
