--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/page/settings-page-container/settings-page-container.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/server-settings/components/page/settings-page-container/settings-page-container.component.html
@@ -1,8 +1,8 @@
-<div class="setting-container">
+<div class="setting-container pt-3">
     <mat-slide-toggle *ngIf="canDisable" [ngModel]="isActive" (ngModelChange)="isActiveChange.emit($event)"></mat-slide-toggle>
     <ng-container *ngIf="isActive">
         <ng-container *ngIf="service.moduleSettings$ | async as moduleSettings">
-            <div class="setting-row" *ngFor="let entry of moduleSettings | keyvalue">
+            <div *ngFor="let entry of moduleSettings | keyvalue">
                 <app-settings-page-row [moduleName]="moduleName" [settingKey]="entry.key" [settingData]="entry.value"></app-settings-page-row>
             </div>
         </ng-container>
