--- a/Modules/WebDashboardModule/ClientApp/src/app/styles/setting-styles.scss
+++ b/Modules/WebDashboardModule/ClientApp/src/app/styles/setting-styles.scss
@@ -20,3 +20,16 @@
         margin-right: 1rem;
     }
 }
+
+.setting-button-row {
+    display: flex;
+    margin-bottom: 1rem;
+    align-items: center;
+    flex-wrap: wrap;
+
+    * {
+        flex-grow: 1;
+        flex-shrink: 1;
+        margin-right: 1rem;
+    }
+}
