--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio-settings/audio-settings.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio-settings/audio-settings.component.html
@@ -1,8 +1,8 @@
 <div class="setting-container" *ngIf="service.state$ | async as state">
     <div class="setting-button-row">
-        <button mat-button *ngIf="state.status == playerStatusEnum.playing">{{ 'Pause' | translate }}</button>
-        <button mat-button *ngIf="state.status == playerStatusEnum.paused">{{ 'Resume' | translate }}</button>
-        <button mat-button *ngIf="state.status != playerStatusEnum.disconnected">{{ 'Stop' | translate }}</button>
+        <button mat-button *ngIf="state.status == playerStatusEnum.playing" (click)="facade.pause()">{{ 'Pause' | translate }}</button>
+        <button mat-button *ngIf="state.status == playerStatusEnum.paused" (click)="facade.resume()">{{ 'Resume' | translate }}</button>
+        <button mat-button *ngIf="state.status != playerStatusEnum.disconnected" (click)="facade.stop()">{{ 'Stop' | translate }}</button>
     </div>
     <div class="setting-row">
         <mat-label>{{ 'Volume' | translate }} {{ state.volume }}</mat-label>
@@ -11,7 +11,7 @@
             [max]="200"
             [step]="1"
             [ngModel]="state.volume"
-            (ngModelChange)="stateService.setVolume($event)"
+            (ngModelChange)="facade.setVolume($event)"
             [tickInterval]="10"
             [thumbLabel]="true"
         ></mat-slider>
