Add leave and join to web

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio-settings/audio-settings.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/audio/components/audio-settings/audio-settings.component.html
@@ -16,4 +16,8 @@
             [thumbLabel]="true"
         ></mat-slider>
     </div>
+    <div class="setting-button-row">
+        <button mat-button (click)="facade.join()">{{ 'Join' | translate }}</button>
+        <button mat-button (click)="facade.leave()">{{ 'Leave' | translate }}</button>
+    </div>
 </div>
