Fix guild selection showing in toolbar on logout

--- a/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/toolbar/toolbar.component.html
+++ b/Modules/WebDashboardModule/ClientApp/src/app/modules/page/components/toolbar/toolbar.component.html
@@ -1,16 +1,18 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button *ngIf="!isInLogin" (click)="navigationOpenedChange.emit(!navigationOpened)">
-        <mat-icon>menu</mat-icon>
-    </button>
+    <ng-container *ngIf="!isInLogin">
+        <button mat-icon-button (click)="navigationOpenedChange.emit(!navigationOpened)">
+            <mat-icon>menu</mat-icon>
+        </button>
 
-    <mat-select
-        *ngIf="guildSelectionService.guilds$ | async as guilds"
-        class="ml-3 mr-3 text-center"
-        [value]="guildSelectionService.selectedGuildId$ | async"
-        (selectionChange)="guildSelectionService.selectGuildId($event.value)"
-    >
-        <mat-option *ngFor="let guild of guilds" [value]="guild.id">{{ guild.name }}</mat-option>
-    </mat-select>
+        <mat-select
+            *ngIf="guildSelectionService.guilds$ | async as guilds"
+            class="ml-3 mr-3 text-center"
+            [value]="guildSelectionService.selectedGuildId$ | async"
+            (selectionChange)="guildSelectionService.selectGuildId($event.value)"
+        >
+            <mat-option *ngFor="let guild of guilds" [value]="guild.id">{{ guild.name }}</mat-option>
+        </mat-select>
+    </ng-container>
 
     <button
         mat-icon-button
